--- a/Menu_Dinamico/Menu_Dinamico.cbp
+++ b/Menu_Dinamico/Menu_Dinamico.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Insertar_Y_Correr" />
+		<Option title="Menu_Dinamico" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Insertar_Y_Correr" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Menu_Dinamico" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Insertar_Y_Correr" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Menu_Dinamico" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,13 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="funciones.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="utilitarios.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="utilitarios.h" />
+		<Unit filename="menu.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
