--- a/Practica/Practica.cbp
+++ b/Practica/Practica.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Insertar_Y_Correr" />
+		<Option title="Practica" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Insertar_Y_Correr" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Practica" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Insertar_Y_Correr" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Practica" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -34,10 +34,6 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="utilitarios.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="utilitarios.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
